# Media-Analyzer

./: .gitignore  README.md  pyproject.toml
sample_data/: movie_data.json  movies.json
src/media_analyzer/: __main__.py  core.py  models.py  radarr.py  sources.py
tests/: test_core.py
